--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,13 +1,27 @@
 @(title: String)(content: Html)
-
 <!DOCTYPE html>
-
 <html lang="en">
     <head>
         <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
+
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-        <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
+
+
+
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("vendor/bootstrap/css/bootstrap.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("vendor/bootstrap/css/bootstrap-theme.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("css/main.css")">
+
+        <script src="@routes.Assets.versioned("vendor/underscore/underscore.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("vendor/jquery/jquery.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("vendor/backbone/backbone.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("vendor/layoutmanager/backbone.layoutmanager.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("vendor/handlebars/handlebars.runtime.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("vendor/bootstrap/js/bootstrap.js")" type="text/javascript"></script>
+
+        <script src="@routes.Assets.versioned("js/templates.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("js/app.js")" type="text/javascript"></script>
+
     </head>
     <body>
         @content
