Updated js build script (grunt) First sketch of html for dashboard Passing necessary vars to template

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,5 @@
-@(message: String)
-@main("Halo") {
+@import models.flickr.{UserToken, TokenInfo}
+@(ti: TokenInfo, ut: UserToken)
+@main("Halo", ti, ut) {
 <div id="layout"></div>
 }
