--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,8 +1,12 @@
-@(title: String)(content: Html)
+@import models.flickr.{UserToken, TokenInfo}
+@(title: String, ti: TokenInfo, ut: UserToken)(content: Html)
 <!DOCTYPE html>
 <html lang="en">
     <head>
+
         <title>@title</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
 
