--- a/app/assets/js/templates/layout.hbs
+++ b/app/assets/js/templates/layout.hbs
@@ -1,16 +1,5 @@
-<header>
-    <div class="inside">
-        <h1>the assistant</h1>
-        <div class="profile">
-            <a href="#" class="logout">[Logout]</a>
-            <img src="">
-        </div>
-    </div>
-</header>
+<header id="header"></header>
 <section id="main" class="container">
-
-
-
     <div class="row">
         <div class="col-md-6">
             <h2>Most faved authors</h2>
@@ -79,8 +68,6 @@
             </table>
         </div>
     </div>
-
 </section>
-<footer>
 
-</footer>
+<footer id="footer"></footer>
