--- a/app/assets/js/templates/header.hbs
+++ b/app/assets/js/templates/header.hbs
@@ -1,7 +1,8 @@
 <div class="inside">
     <h1>the assistant</h1>
     <div class="profile">
+        Hi {{user.fullname}}
+        <img src="http://flickr.com/buddyicons/{{user.nsid}}.jpg">
         <a href="#" class="logout">[Logout]</a>
-        <img src="">
     </div>
 </div>
