Enriched stats of favs tags

--- a/app/assets/js/templates/top-faved-authors.hbs
+++ b/app/assets/js/templates/top-faved-authors.hbs
@@ -9,8 +9,15 @@
     <tbody>
         {{#each owners}}
         <tr>
-            <td><a href="https://www.flickr.com/photos/{{owner}}/" target="_blank"><img src="http://flickr.com/buddyicons/{{owner}}.jpg"> {{owner}}</a></td>
+            <td><a href="https://www.flickr.com/photos/{{owner}}/" target="_blank"><img src="http://flickr.com/buddyicons/{{owner}}.jpg"> {{owner_name}}</a></td>
             <td>{{count}}</td>
+        </tr>
+        <tr>
+            <td colspan="2">
+            {{#each topphotos}}
+                <a href="https://www.flickr.com/photos/{{photo.owner}}/{{photo.id}}" target="_blank"><img src="{{photo.urls.largeSquareThumb}}"></a>
+            {{/each}}
+            </td>
         </tr>
         {{/each}}
     </tbody>
