Small js code reorganization

--- a/app/assets/js/templates/home.hbs
+++ b/app/assets/js/templates/home.hbs
@@ -1,4 +1,4 @@
 <div class="row">
-    <div class="col-md-6 left-panel"></div>
-    <div class="col-md-6 right-panel"></div>
+    <div class="col-md-6 left-panel faved-tags"></div>
+    <div class="col-md-6 right-panel faved-authors"></div>
 </div>
