--- a/app/assets/js/templates/layout.hbs
+++ b/app/assets/js/templates/layout.hbs
@@ -1,3 +1,4 @@
 <header id="header"></header>
+<nav id="menu"></nav>
 <section id="main" class="container"></section>
 <footer id="footer"></footer>
