--- a/app/assets/style/main.less
+++ b/app/assets/style/main.less
@@ -47,3 +47,13 @@ header {
 footer {
     .basecontainer();
 }
+
+.faved-authors  {
+    .non-contacts {
+        float:right;
+        display:block;
+        font-size: 12px;
+        font-weight: normal;
+    }
+
+}
