--- a/public/css/main.css
+++ b/public/css/main.css
@@ -29,3 +29,9 @@ footer {
   padding: 0;
   margin: 0 auto;
 }
+.faved-authors .non-contacts {
+  float: right;
+  display: block;
+  font-size: 12px;
+  font-weight: normal;
+}
