Project restructure completed

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@import models.flickr.{UserToken, TokenInfo}
+@import domain.entities.{UserToken, TokenInfo}
 @(ti: TokenInfo, ut: UserToken)
 @main("Halo", ti, ut) {
 <div id="layout"></div>
