--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@import models.flickr.{UserToken, TokenInfo}
+@import domain.entities.{UserToken, TokenInfo}
 @import play.api.libs.json.Json
 @(title: String, ti: TokenInfo, ut: UserToken)(content: Html)
 <!DOCTYPE html>
