Added link for switch back to displaying all faved authors

--- a/app/assets/js/templates/top-faved-authors.hbs
+++ b/app/assets/js/templates/top-faved-authors.hbs
@@ -1,5 +1,11 @@
+<h2>Faved authors
+{{#if nonContacts}}
+<a href="#" class="remove-contacts-filter">Remove filter</a>
+{{else}}
+<a href="#" class="non-contacts">Show only non-contacts</a>
+{{/if}}
+</h2>
 
-<h2>Faved authors <a href="#" class="non-contacts">Show only non-contacts</a></h2>
 <table class="table table-striped">
     <thead>
     <tr>
