--- a/app/assets/style/main.less
+++ b/app/assets/style/main.less
@@ -49,7 +49,7 @@ footer {
 }
 
 .faved-authors  {
-    .non-contacts {
+    .non-contacts, .remove-contacts-filter {
         float:right;
         display:block;
         font-size: 12px;
