--- a/public/css/main.css
+++ b/public/css/main.css
@@ -29,7 +29,8 @@ footer {
   padding: 0;
   margin: 0 auto;
 }
-.faved-authors .non-contacts {
+.faved-authors .non-contacts,
+.faved-authors .remove-contacts-filter {
   float: right;
   display: block;
   font-size: 12px;
