--- a/app/assets/js/templates/top-faved-tags.hbs
+++ b/app/assets/js/templates/top-faved-tags.hbs
@@ -1,25 +1,3 @@
 <h2>Faved tags</h2>
-<table class="table table-striped">
-    <thead>
-    <tr>
-        <th>Tag</th>
-        <th>Count</th>
-    </tr>
-    </thead>
-    <tbody>
-    {{#each tags}}
-        <tr>
-            <td><strong>{{tag}}</strong></td>
-            <td>{{count}}</td>
-        </tr>
-        <tr>
-            <td colspan="2">
-                {{#each topphotos}}
-                    <a href="https://www.flickr.com/photos/{{photo.owner}}/{{photo.id}}" target="_blank"><img src="{{photo.urls.largeSquareThumb}}"></a>
-                {{/each}}
-            </td>
-        </tr>
-    {{/each}}
-    </tbody>
-</table>
+<div class="pages"></div>
 <p><a href="#" class="moar">Show more ...</a></p>
