--- a/app/assets/js/templates/top-faved-authors.hbs
+++ b/app/assets/js/templates/top-faved-authors.hbs
@@ -5,29 +5,6 @@
 <a href="#" class="non-contacts">Show only non-contacts</a>
 {{/if}}
 </h2>
+<div class="pages"></div>
 
-<div>
-    {{#each owners}}
-        <h5>
-           <a href="https://www.flickr.com/photos/{{owner}}/" target="_blank"><img src="http://flickr.com/buddyicons/{{owner}}.jpg"> <strong>{{owner_name}}</strong></a></td>
-           <span class="count">({{count}})</span>
-        </h5>
-        <p>
-        {{#each topphotos}}
-            <a href="https://www.flickr.com/photos/{{photo.owner}}/{{photo.id}}" target="_blank"><img src="{{photo.urls.largeSquareThumb}}"></a>
-        {{/each}}
-       </p>
-    {{/each}}
-</div>
-
-<table class="table table-striped">
-    <thead>
-    <tr>
-        <th>Author</th>
-        <th>Count</th>
-    </tr>
-    </thead>
-    <tbody>
-    </tbody>
-</table>
 <p><a href="#" class="moar">Show more ...</a></p>
