Working on dashboard daterange filter

--- a/app/assets/js/templates/home.hbs
+++ b/app/assets/js/templates/home.hbs
@@ -1,3 +1,4 @@
+<div class="faved-filters"></div>
 <div class="row">
     <div class="col-md-6 left-panel faved-tags"></div>
     <div class="col-md-6 right-panel faved-authors"></div>
