--- a/app/assets/js/templates/top-faved-authors.hbs
+++ b/app/assets/js/templates/top-faved-authors.hbs
@@ -7,4 +7,4 @@
 </h2>
 <div class="pages"></div>
 
-<p><a href="#" class="moar">Show more ...</a></p>
+<p class="moar-container"><a href="#" class="moar">Show more ...</a></p>
