--- a/app/assets/js/templates/top-faved-tags.hbs
+++ b/app/assets/js/templates/top-faved-tags.hbs
@@ -1,3 +1,3 @@
 <h2>Faved tags</h2>
 <div class="pages"></div>
-<p><a href="#" class="moar">Show more ...</a></p>
+<p class="moar-container"><a href="#" class="moar">Show more ...</a></p>
