Added timeline view to js app

--- a/app/assets/js/templates/home.hbs
+++ b/app/assets/js/templates/home.hbs
@@ -1,5 +1,9 @@
-<div class="faved-filters"></div>
-<div class="row">
-    <div class="col-md-6 left-panel faved-tags"></div>
-    <div class="col-md-6 right-panel faved-authors"></div>
+<div id="ilike" class="dashboard ">
+    <div class="faved-filters"></div>
+    <div class="row">
+        <div class="col-md-6 left-panel faved-tags"></div>
+        <div class="col-md-6 right-panel faved-authors"></div>
+    </div>
 </div>
+<div id="myphotos" class="dashboard">my photos</div>
+<div id="timeline" class="dashboard active"></div>
