--- a/app/assets/js/templates/layout.hbs
+++ b/app/assets/js/templates/layout.hbs
@@ -1,4 +1,4 @@
 <header id="header"></header>
-<nav id="menu"></nav>
+<div id="menu"></div>
 <section id="main" class="container"></section>
 <footer id="footer"></footer>
