--- a/app/assets/js/templates/nav.hbs
+++ b/app/assets/js/templates/nav.hbs
@@ -1,5 +1,7 @@
-<ul class="nav nav-pills">
-    <li role="presentation" class="active"><a href="#">Home</a></li>
-    <li role="presentation"><a href="#">Profile</a></li>
-    <li role="presentation"><a href="#">Messages</a></li>
-</ul>
+<nav>
+    <ul class="nav nav-pills"  role="tablist">
+        <li role="presentation" ><a href="#ilike" aria-controls="ilike" role="tab">I like</a></li>
+        <li role="presentation"><a href="#myphotos" aria-controls="myphotos" role="tab">My photos</a></li>
+        <li role="presentation" class="active"><a href="#timeline" aria-controls="timeline" role="tab">Timeline</a></li>
+    </ul>
+</nav>
