Working on faving users

--- a/clientside/js/templates/home.hbs
+++ b/clientside/js/templates/home.hbs
@@ -8,7 +8,7 @@
 <div id="myphotos" class="dashboard active">
     <div class="row">
         <div class="col-md-6 left-panel my-hot-tags"></div>
-        <div class="col-md-6 right-panel faving-authors"></div>
+        <div class="col-md-6 right-panel faving-users"></div>
     </div>
 </div>
 <div id="timeline" class="dashboard"></div>
