--- a/clientside/js/templates/faving-users.hbs
+++ b/clientside/js/templates/faving-users.hbs
@@ -1,1 +1,14 @@
-faving users
+<h2>faving users</h2>
+<ul>
+
+    {{#each stats}}
+        <li>
+            <a href="https://www.flickr.com/photos/{{user}}/" target="_blank"><img src="http://flickr.com/buddyicons/{{user}}.jpg"> <strong>{{some realname username}}</strong></a></td>
+            <span class="count">({{count}})</span>
+            {{daterange first_fav last_fav}}
+
+        </li>
+
+    {{/each}}
+
+</ul>
