Breaking down js files + updated "my photos" dashboard section

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -27,7 +27,7 @@
         <script src="@routes.Assets.versioned("js/templates.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("js/app.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("js/models.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.versioned("js/view-features.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("js/components.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("js/views.js")" type="text/javascript"></script>
 
         <script type="text/javascript">
