--- a/clientside/js/templates/faved-authors-list.hbs
+++ b/clientside/js/templates/faved-authors-list.hbs
@@ -1,12 +1,12 @@
 <div>
-    {{#each owners}}
+    {{#each items}}
         <h5>
             <a href="https://www.flickr.com/photos/{{owner}}/" target="_blank"><img src="http://flickr.com/buddyicons/{{owner}}.jpg"> <strong>{{owner_name}}</strong></a></td>
             <span class="count">({{count}})</span>
         </h5>
         <p>
             {{#each topphotos}}
-                <a href="https://www.flickr.com/photos/{{photo.owner}}/{{photo.id}}" target="_blank" title="{{attr photo.title}} ({{photo.count_faves}})"><img src="{{photo.urls.largeSquareThumb}}"></a>
+                <a href="https://www.flickr.com/photos/{{owner}}/{{id}}" target="_blank" title="{{attr title}} ({{count_faves}})"><img src="{{urls.largeSquareThumb}}"></a>
             {{/each}}
         </p>
     {{/each}}
