--- a/clientside/js/templates/my-hot-tags-list.hbs
+++ b/clientside/js/templates/my-hot-tags-list.hbs
@@ -1,13 +1,15 @@
-<div>
+<ul>
+
     {{#each items}}
-        <h5>
-            <strong>{{tag}}</strong>
-            <span class="count">({{count}})</span>
-        </h5>
-        <p>
+        <li>
+            <strong>{{tag}}</strong> ({{count}} / {{f avg_points}} / {{f top_avg_points}})
+        </li>
+        <li>
             {{#each topphotos}}
                 <a href="https://www.flickr.com/photos/{{owner}}/{{id}}" target="_blank" title="{{attr title}} ({{count_faves}})"><img src="{{urls.largeSquareThumb}}"></a>
             {{/each}}
-        </p>
+
+        </li>
     {{/each}}
-</div>
+
+</ul>
