Wrapped up "my photos" panel

--- a/clientside/js/templates/faving-users-list.hbs
+++ b/clientside/js/templates/faving-users-list.hbs
@@ -1,12 +1,10 @@
 <ul>
-
     {{#each items}}
         <li>
             <a href="https://www.flickr.com/photos/{{user}}/" target="_blank"><img src="http://flickr.com/buddyicons/{{user}}.jpg"> <strong>{{some realname username}}</strong></a></td>
             <span class="count">({{count}})</span>
-            {{daterange first_fav last_fav}}
-
+            <span class="date">{{daterange first_fav last_fav}}</span>
+            {{following user ../contacts}}
         </li>
     {{/each}}
-
 </ul>
