--- a/clientside/js/templates/header.hbs
+++ b/clientside/js/templates/header.hbs
@@ -1,5 +1,5 @@
 <div class="inside">
-    <h1>the assistant</h1>
+    <h1>f insights</h1>
     <div class="profile">
         Hi {{user.fullname}}
         <img src="http://flickr.com/buddyicons/{{user.nsid}}.jpg">
@@ -15,6 +15,4 @@
         </div>
 
     </div>
-
-
 </div>
