--- a/clientside/js/templates/home.hbs
+++ b/clientside/js/templates/home.hbs
@@ -1,11 +1,11 @@
-<div id="ilike" class="dashboard ">
+<div id="ilike" class="dashboard active">
     <div class="faved-filters"></div>
     <div class="row">
         <div class="col-md-6 left-panel faved-tags"></div>
         <div class="col-md-6 right-panel faved-authors"></div>
     </div>
 </div>
-<div id="myphotos" class="dashboard active">
+<div id="myphotos" class="dashboard">
     <div class="row">
         <div class="col-md-6 left-panel my-hot-tags"></div>
         <div class="col-md-6 right-panel faving-users"></div>
