--- a/clientside/js/templates/my-hot-tags.hbs
+++ b/clientside/js/templates/my-hot-tags.hbs
@@ -1,3 +1,6 @@
-<h3>my hot tags</h3>
+<h2>
+    Tags
+    <div>Order: <a class="orderlink order_top_avg_points" data-order="top_avg_points" href="#">top avg</a> | <a class="orderlink order_count" data-order="count" href="#">count</a> | <a class="orderlink order_avg_points" data-order="avg_points" href="#">avg</a></div>
+</h2>
 <div class="pages"></div>
 <p><a href="#" class="moar">Show more ...</a></p>
