--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -5,7 +5,7 @@
 <html lang="en">
     <head>
 
-        <title>@title</title>
+        <title>f Insight</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
