--- a/clientside/js/templates/nav.hbs
+++ b/clientside/js/templates/nav.hbs
@@ -1,7 +1,7 @@
 <nav>
     <ul class="nav nav-pills"  role="tablist">
-        <li role="presentation"><a href="#ilike" aria-controls="ilike" role="tab">I like</a></li>
-        <li role="presentation" class="active"><a href="#myphotos" aria-controls="myphotos" role="tab">My photos</a></li>
+        <li role="presentation" class="active"><a href="#ilike" aria-controls="ilike" role="tab">I like</a></li>
+        <li role="presentation"><a href="#myphotos" aria-controls="myphotos" role="tab">My photos</a></li>
         <li role="presentation"><a href="#timeline" aria-controls="timeline" role="tab">Timeline</a></li>
     </ul>
 </nav>
