--- a/clientside/style/main.less
+++ b/clientside/style/main.less
@@ -97,7 +97,7 @@ footer {
 
 }
 
-.faved-authors, .faved-tags {
+.faved-authors, .faved-tags, .my-hot-tags {
     h5 {
         background: #fff;
         padding: 12px 0 10px 12px;
@@ -156,5 +156,41 @@ footer {
     }
     th.what {
         text-align: right;
+    }
+}
+
+.my-hot-tags {
+    h2 div {
+        float: right;
+        font-size: 12px;
+        font-weight: normal;
+        padding: 12px;
+
+        a.active {
+            color: #111;
+        }
+
+    }
+}
+
+.faving-users {
+    ul {
+        margin: 0; padding: 0;
+        list-style-type: none;
+
+        li {
+
+            background: #fff;
+            padding:  12px;
+            margin-bottom: 12px;
+
+            .date {
+                color: #808b96;
+            }
+
+            img {
+                margin-right: 4px;
+            }
+        }
     }
 }
