--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -11,12 +11,11 @@
 
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
 
-
-
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("vendor/bootstrap/css/bootstrap.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("vendor/bootstrap/css/bootstrap-theme.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("css/main.css")">
 
+        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
         <script src="@routes.Assets.versioned("vendor/underscore/underscore.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("vendor/jquery/jquery.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("vendor/backbone/backbone.js")" type="text/javascript"></script>
