--- a/clientside/style/main.less
+++ b/clientside/style/main.less
@@ -200,3 +200,30 @@ footer {
         margin: 0 auto;
     }
 }
+
+#relativeschart-container {
+    background: #fff;
+    .legend {
+        ul {
+            list-style-type: disc;
+            list-style-position: inside;
+            overflow: hidden;
+            padding-bottom: 12px;
+            li {
+                margin-left: 12px;
+                float: left;
+                span {
+                    color: #333;
+                }
+            }
+            li.size-selector {
+                color: #000;
+                list-style-type: none;
+                padding-left: 30px;
+                a.active {
+                    color: #333;
+                }
+            }
+        }
+    }
+}
